# parallelism-in-python

./: .gitignore  .tool-versions  README.md  pyproject.toml
src/parallelism_in_python/: asyncio_programming.py  multi_processing.py  multi_threading.py  sequential_programming.py
src/parallelism_in_python/utils/: timeit.py  urls.py
